Fix tooltips overlapping and not allowing to select citation bars. Codes are now displayed immediately when added, without having to refresh the page.

--- a/libreqda/static/css/base.css
+++ b/libreqda/static/css/base.css
@@ -233,6 +233,7 @@ body {
 
 .tooltip {
     z-index: 1;
+    pointer-events: none;
 }
 
 .tooltip.in {
